# libstat17

./: .env.example  .gitignore  LICENSE  Makefile  README.md  Snakefile  get_group_data.py  get_maps_points.py  pyproject.toml
lib/clients/: client_vk.py
scripts/: create_vk_token.py  dto_group.py  extract_lib_stats.py  extract_wishes_nonbooks.py  flatten_data.py  get_group_data.py  get_map_points.py  label_topics.py  prepare_for_datalens.py  wishes_extraction_books.py  wishes_extraction_nonbooks.py
src/: dto_group.py  utils.py
src/clients/: llm.py  vk.py
src/dto/: dto_wishes.py
src/prompts/: book_wishes.py  extract_books_wishes.py  extract_nonbooks_wishes.py  lib_stats.py  nonbook_wishes.py  topic_labeling.py
src/services/: board.py  wish_extractor.py
